rospfr model completion

--- a/Models.ipynb
+++ b/Models.ipynb
@@ -32,6 +32,14 @@
    "outputs": [],
    "source": [
     "def midpoint_vals(bound):\n",
+    "    \"\"\"\n",
+    "        Helper method to generate inital value for design variable based on established bounds.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        bounds : {tuple}\n",
+    "            upper and lower bounds for design variable\n",
+    "    \"\"\"\n",
     "    if bound[0] is None:\n",
     "        return bound[1]\n",
     "    \n",
@@ -195,7 +203,7 @@
     "        c_susl : {np.array}\n",
     "            surplus and slack costs\n",
     "        \n",
-    "        num_scenarios : {np.array}\n",
+    "        num_scenarios : {int}\n",
     "            number of scenarios\n",
     "    \"\"\"\n",
     "    scenario_prob = 1/num_scenarios\n",
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -245,14 +253,10 @@
      "output_type": "stream",
      "text": [
       "Singular matrix C in LSQ subproblem    (Exit mode 6)\n",
-      "            Current function value: -462.607580193\n",
+      "            Current function value: -394.069356626\n",
       "            Iterations: 1\n",
       "            Function evaluations: 60\n",
-      "            Gradient evaluations: 1\n",
-      "Sales Units - S0: 10.0, S1: 32.5\n",
-      "Purchase Units - P0: 10.0, P1: 32.5\n",
-      "Inventory Units - I0_final: 10.0, I1_final: 32.5, I2_final: 10.0, I3_final: 32.5\n",
-      "Operation Levels - R0: 10.0, R1: 32.5, R2: 40.0, R3: 85.0, R4: 10.0, R5: 10.0, R6: 10.0, R7: 10.0, R8: 40.0, R9: 35.0, R10: 0.0, R11: 0.0, R12: 0.0, R13: 0.0, R14: 0.0, R15: 0.0, R16: 0.0, R17: 0.0, R18: 0.0, R19: 0.0, R20: 0.0, R21: 0.0, R22: 0.0, R23: 0.0, R24: 0.0, R25: 0.0, R26: 0.0, R27: 0.0, R28: 0.0, R29: 0.0, R30: 0.0, R31: 0.0, R32: 0.0, R33: 0.0, R34: 0.0, R35: 0.0, R36: 0.0, R37: 0.0, R38: 0.0, R39: 0.0, R40: 0.0, R41: 0.0, R42: 0.0, R43: 0.0, R44: 0.0, R45: 0.0, R46: 0.0, R47: 0.0, R48: 0.0, R49: 0.0\n"
+      "            Gradient evaluations: 1\n"
      ]
     }
    ],
@@ -301,7 +305,6 @@
     "# starting index of surplus and slack variables in decision array (ssi)\n",
     "ssi = len(bounds) - (2*num_scenarios*4 + 1)\n",
     "for idx in range(0,num_scenarios):\n",
-    "    jump_indices = (2*idx, 2*idx+1)\n",
     "    su_idx = ssi+2*idx\n",
     "    sl_idx = ssi+2*idx+1\n",
     "    s1_idx = 2*idx\n",
@@ -314,29 +317,8 @@
     "res = optimize.minimize(tssp_obj, x0, args=(q_samples,c,e,f, csusl, num_scenarios), method=\"SLSQP\", \n",
     "                        bounds=bounds, constraints=cons, options={\"disp\":True})\n",
     "    \n",
-    "x = res.x\n",
-    "\n",
-    "print \"Sales Units - %s\" % \", \".join([\"S%s: %s\" % (idx, val) for idx, val in enumerate(x[:2])])\n",
-    "print \"Purchase Units - %s\" % \", \".join([\"P%s: %s\" % (idx, val) for idx, val in enumerate(x[2:4])])\n",
-    "print \"Inventory Units - %s\" % \", \".join([\"I%s_final: %s\" % (idx, val) for idx, val in enumerate(x[4:8])])\n",
-    "print \"Operation Levels - %s\" % \", \".join([\"R%s: %s\" % (idx, val) for idx, val in enumerate(x[8:])])"
+    "x = res.x"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TSSP - Financial Risk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -347,12 +329,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def rospfr_obj(x, q, c, e, f, pt, gpw):\n",
+    "    \"\"\"\n",
+    "        Objective function for RO-SP-FR formulation of TSSP.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        x : {np.array}\n",
+    "            design variables\n",
+    "        \n",
+    "        q : {np.array}\n",
+    "            stochastic sales price - shape (num_scenarios, num_det_var)\n",
+    "        \n",
+    "        c : {np.array}\n",
+    "            purchase costs\n",
+    "        \n",
+    "        e : {np.array}\n",
+    "            inventory returns\n",
+    "        \n",
+    "        f : {np.array}\n",
+    "            operation costs\n",
+    "        \n",
+    "        pt : {np.array}\n",
+    "            profit targets for each scenario - shape (num_scenarios, num_targets)\n",
+    "        \n",
+    "        gpw : {np.array}\n",
+    "            ROSPFR goal programming weights for each scenario\n",
+    "    \"\"\"\n",
+    "    num_scenarios = len(gpw)\n",
+    "    scenario_prob = 1/num_scenarios\n",
+    "    \n",
+    "    # segment design variables\n",
+    "    num_stoch = q.size\n",
+    "    s = x[:num_stoch]\n",
+    "    s = s.reshape(num_scenarios,2)\n",
+    "    \n",
+    "    det_indices = [len(c), len(e), len(f)]\n",
+    "    for idx in range(0, len(det_indices)):\n",
+    "        if idx == 0:\n",
+    "            det_indices[idx] += num_stoch\n",
+    "            continue\n",
+    "        det_indices[idx] += det_indices[idx-1]\n",
+    "    p = x[num_stoch:det_indices[0]]\n",
+    "    I = x[det_indices[0]:det_indices[1]]\n",
+    "    R = x[det_indices[1]:]\n",
+    "    \n",
+    "    # <det> + scenario_prob*(sum_s <stoch>) - (su_sl_cost*<su_sl>)\n",
+    "    det_seg = -np.dot(c,p) + np.dot(e,I) - np.dot(f,R)\n",
+    "    \n",
+    "    # Sx2 * 2xS - np.dot is matrix multiplication for 2-D arrays\n",
+    "    stoch_seg = np.dot(q,s.T)\n",
+    "    stoch_seg = np.dot(stoch_seg.diagonal(), np.ones(num_scenarios)*scenario_prob)\n",
+    "    \n",
+    "    # calculated profit per scenario\n",
+    "    ineq_eval = np.dot(q,s.T).diagonal() + det_seg\n",
+    "    \n",
+    "    rospfr_seg = [[ineq_eval[idx] < target for target in target_arr] for idx, target_arr in enumerate(pt)]\n",
+    "    rospfr_seg = np.array(map(lambda x: sum(x), rospfr_seg))\n",
+    "    rospfr_seg = np.dot(rospfr_seg,gpw)*scenario_prob\n",
+    "    \n",
+    "    obj = stoch_seg + det_seg - rospfr_seg\n",
+    "    \n",
+    "    return -1*obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rospfr_con(x, q, c, e, f, scenario, u_s, omega_i, con_type):\n",
+    "    \"\"\"\n",
+    "        ROSPFR-specific constraint.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        x : {np.array}\n",
+    "            design variables\n",
+    "        \n",
+    "        q : {np.array}\n",
+    "            sales prices - shape (num_scenarios, num_det_var)\n",
+    "        \n",
+    "        c : {np.array}\n",
+    "            purchase costs\n",
+    "        \n",
+    "        e : {np.array}\n",
+    "            inventory returns\n",
+    "        \n",
+    "        f : {np.array}\n",
+    "            operation costs\n",
+    "        \n",
+    "        scenario : {int}\n",
+    "            scenario number for indexing purposes\n",
+    "        \n",
+    "        u_s : {float}\n",
+    "            scenario profit upper bound\n",
+    "        \n",
+    "        omega_i : {float}\n",
+    "            profit target\n",
+    "        \n",
+    "        con_type : {int}\n",
+    "            type of constraint to return\n",
+    "    \"\"\"\n",
+    "    num_scenarios = q.shape[0]\n",
+    "    # segment design variables\n",
+    "    num_stoch = q.size\n",
+    "    s = x[:num_stoch]\n",
+    "    s = s.reshape(num_scenarios,2)\n",
+    "    \n",
+    "    det_indices = [len(c), len(e), len(f)]\n",
+    "    for idx in range(0, len(det_indices)):\n",
+    "        if idx == 0:\n",
+    "            det_indices[idx] += num_stoch\n",
+    "            continue\n",
+    "        det_indices[idx] += det_indices[idx-1]\n",
+    "    p = x[num_stoch:det_indices[0]]\n",
+    "    I = x[det_indices[0]:det_indices[1]]\n",
+    "    R = x[det_indices[1]:]\n",
+    "    \n",
+    "    ineq_eval = np.dot(q[scenario],s[scenario]) - np.dot(c,p) + np.dot(e,I) - np.dot(f,R)\n",
+    "    \n",
+    "    bin_var = 1 if ineq_eval < omega_i else 0\n",
+    "    \n",
+    "    if con_type == 1:\n",
+    "        # q_s'*y_s - c'*x >= omega_i - u_s*z_si\n",
+    "        return ineq_eval + u_s*bin_var - omega_i\n",
+    "    else:\n",
+    "        # q_s'*y_s - c'*x <= omega_i + u_s(1 - z_si)\n",
+    "        return omega_i + u_s*(1 - bin_var) - ineq_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Singular matrix C in LSQ subproblem    (Exit mode 6)\n",
+      "            Current function value: -1171.23674151\n",
+      "            Iterations: 1\n",
+      "            Function evaluations: 20\n",
+      "            Gradient evaluations: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_scenarios = 5\n",
+    "gpw = np.array([15, 20, 30, 50, 10]) # proportional to num scenarios\n",
+    "profit_target = (1000, 500, 3) # mean, variance, number of targets\n",
+    "pt = np.random.normal(profit_target[0], profit_target[1], (num_scenarios, profit_target[2]))\n",
+    "\n",
+    "# upper bound on profits for each scenario - used in cons\n",
+    "u_s = np.array([1500, 2000, 3000, 5000, 1000])\n",
+    "\n",
+    "# sales price samples - num_scenarios*num_stoch_var\n",
+    "q_samples = np.random.normal(90,27,(num_scenarios, 2))\n",
+    "\n",
+    "# purchase cost\n",
+    "c = np.array([10, 15])\n",
+    "\n",
+    "# inventory coefficients\n",
+    "e = np.array([10, 15, 20, 25])\n",
+    "\n",
+    "# operation cost\n",
+    "f = np.array([30, 35])\n",
+    "\n",
+    "# bounds\n",
+    "# <sampled stoch> + <det>\n",
+    "bounds = [(20, 40), (20, 85)]*num_scenarios # bounds unchanged for stochastic vars\n",
+    "bounds += [(20, 100), (30, 200), (0, 20), (0, 20), (0, 20), (0, 20), (20, 100), (30, 100)]\n",
+    "\n",
+    "# init vals\n",
+    "x0 = np.array(map(lambda x: midpoint_vals(x),bounds))\n",
+    "\n",
+    "cons = []\n",
+    "# last index of stochastic variables in decision array (sei)\n",
+    "sei = q_samples.size - 1\n",
+    "cons.append({\"type\":\"eq\", \"fun\": lambda x: x[sei+1] - 0.4*x[sei+7] - x[sei+3]})\n",
+    "cons.append({\"type\": \"eq\", \"fun\": lambda x: x[sei+2] - 0.6*x[sei+7] - x[sei+8] - x[sei+4]})\n",
+    "for idx in range(0,num_scenarios):\n",
+    "    s1_idx = 2*idx\n",
+    "    s2_idx = 2*idx+1    \n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: 0.5*x[sei+7] - x[sei+5] - x[s1_idx]})\n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: 0.6*x[sei+8] - x[sei+6] - x[s2_idx]})\n",
+    "\n",
+    "\n",
+    "# generate constraints for each scenario and each profit target\n",
+    "for s_idx in range(0, num_scenarios):\n",
+    "    for target in pt[s_idx]:\n",
+    "        cons.append({\"type\": \"ineq\", \"fun\": rospfr_con, \"args\":(q_samples,c,e,f,s_idx,u_s[s_idx],target,1)})\n",
+    "        cons.append({\"type\": \"ineq\", \"fun\": rospfr_con, \"args\":(q_samples,c,e,f,s_idx,u_s[s_idx],target,2)})\n",
+    "\n",
+    "res = optimize.minimize(rospfr_obj, x0, args=(q_samples,c,e,f,pt,gpw), method=\"SLSQP\", bounds=bounds, constraints=cons,\n",
+    "                        options={\"disp\":True})\n",
+    "\n",
+    "x = res.x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,13 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def risk_const(x, params, risk_param, profit_lb):\n",
+    "def risk_con(x, params, risk_param, profit_lb):\n",
     "    \"\"\"\n",
     "        Risk constraint for Mean-Markovitz model.\n",
     "        \n",
@@ -417,24 +603,40 @@
     "    R = x[8:]\n",
     "    \n",
     "    const = np.dot(mu_q, s) - np.dot(c,p) + np.dot(e,I) - np.dot(f,R) - \\\n",
-    "        risk_param*np.sqrt(np.dot(np.square(std_q),np.square(y))) - profit_lb\n",
+    "        risk_param*np.sqrt(np.dot(np.square(std_q),np.square(s))) - profit_lb\n",
     "    \n",
     "    return const"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive directional derivative for linesearch    (Exit mode 8)\n",
+      "            Current function value: -100\n",
+      "            Iterations: 8\n",
+      "            Function evaluations: 48\n",
+      "            Gradient evaluations: 4\n",
+      "Sales Units - S0: 20.0, S1: 23.1541097056\n",
+      "Purchase Units - P0: 34.6781443247, P1: 76.4178979509\n",
+      "Inventory Units - I0_final: 15.3218056753, I1_final: 18.5820520491, I2_final: 9.99999971471e-05, I3_final: 9.99999944858e-05\n",
+      "Operation Levels - R0: 40.0002239731, R1: 30.0\n"
+     ]
+    }
+   ],
    "source": [
     "# profit lb\n",
-    "t = 10000\n",
+    "t = 100\n",
     "\n",
     "# risk param\n",
-    "theta = 0.3\n",
+    "theta = 0.5\n",
     "\n",
     "# mean sales price\n",
     "mean_q = np.array([90, 80])\n",
@@ -457,7 +659,7 @@
     "bounds = [(20, 40), (20, 85), (20, 100), (30, 200), (0.0001, 20), (0.0001, 20), (0.0001, 20), (0.0001, 20), (20, 100), (30, 100)]\n",
     "\n",
     "# init vals - boundary midpoints\n",
-    "x0 = np.array([(tup[1] - tup[0])/2 for tup in bounds])\n",
+    "x0 = np.array([midpoint_vals(bound) for bound in bounds])\n",
     "\n",
     "# maximize profit\n",
     "obj = lambda x: -t\n",
@@ -467,7 +669,7 @@
     "\n",
     "# constraints\n",
     "cons = (\n",
-    "    {\"type\": \"ineq\", \"fun\": risk_const, \"args\": (params,theta,t)},\n",
+    "    {\"type\": \"ineq\", \"fun\": risk_con, \"args\": (params,theta,t)},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: x[2] - 0.4*x[8] - x[4]},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: x[3] - 0.6*x[8] - x[9] - x[5]},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: 0.5*x[8] - x[6] - x[0]},\n",
@@ -483,6 +685,15 @@
     "print \"Inventory Units - %s\" % \", \".join([\"I%s_final: %s\" % (idx, val) for idx, val in enumerate(x[4:8])])\n",
     "print \"Operation Levels - %s\" % \", \".join([\"R%s: %s\" % (idx, val) for idx, val in enumerate(x[8:])])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
