removed sl/su vars for binding constraints

--- a/Models.ipynb
+++ b/Models.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 172,
    "metadata": {
     "collapsed": true
    },
@@ -234,16 +234,17 @@
     "    stoch_seg = np.dot(q,s.T)\n",
     "    stoch_seg = np.dot(stoch_seg.diagonal(),np.ones(num_scenarios)*scenario_prob)\n",
     "    \n",
-    "    susl_seg = np.dot(np.dot(su_sl, c_susl), np.ones(num_scenarios*4)*scenario_prob)\n",
+    "    # susl_seg = np.dot(np.dot(su_sl, c_susl), np.ones(num_scenarios*4)*scenario_prob)\n",
+    "    # obj = stoch_seg + det_seg - susl_seg\n",
     "    \n",
-    "    obj = stoch_seg + det_seg - susl_seg\n",
+    "    obj = stoch_seg + det_seg\n",
     "    \n",
     "    return -1*obj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
@@ -252,11 +253,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Singular matrix C in LSQ subproblem    (Exit mode 6)\n",
-      "            Current function value: -394.069356626\n",
-      "            Iterations: 1\n",
-      "            Function evaluations: 60\n",
-      "            Gradient evaluations: 1\n"
+      "Optimization terminated successfully.    (Exit mode 0)\n",
+      "            Current function value: -12258.0130078\n",
+      "            Iterations: 10\n",
+      "            Function evaluations: 360\n",
+      "            Gradient evaluations: 6\n"
      ]
     }
    ],
@@ -289,6 +290,10 @@
     "\n",
     "# dynamically generate equality constraints\n",
     "\n",
+    "cons = []\n",
+    "# last index of stochastic variables in decision array (sei)\n",
+    "sei = q_samples.size - 1\n",
+    "\n",
     "\"\"\"\n",
     "surplus and slack variable consistent across all constraints for each scenario\n",
     "determinstic_constraints = [\n",
@@ -297,11 +302,9 @@
     "    {\"type\": \"eq\", \"fun\": lambda x: 0.5*x[8] - x[6] - x[0]},\n",
     "    {\"type\": \"eq\", \"fun\": lambda x: 0.6*x[9] - x[7] - x[1]}\n",
     "]\n",
-    "\"\"\"\n",
     "\n",
-    "cons = []\n",
-    "# last index of stochastic variables in decision array (sei)\n",
-    "sei = q_samples.size - 1\n",
+    "Logic for dynamically generating constraints that use surplus and slack variables\n",
+    "\n",
     "# starting index of surplus and slack variables in decision array (ssi)\n",
     "ssi = len(bounds) - (2*num_scenarios*4 + 1)\n",
     "for idx in range(0,num_scenarios):\n",
@@ -316,7 +319,21 @@
     "\n",
     "res = optimize.minimize(tssp_obj, x0, args=(q_samples,c,e,f, csusl, num_scenarios), method=\"SLSQP\", \n",
     "                        bounds=bounds, constraints=cons, options={\"disp\":True})\n",
+    "\"\"\"\n",
+    "\n",
+    "cons.append({\"type\":\"eq\", \"fun\": lambda x: x[sei+1] - 0.4*x[sei+7] - x[sei+3]})\n",
+    "cons.append({\"type\": \"eq\", \"fun\": lambda x: x[sei+2] - 0.6*x[sei+7] - x[sei+8] - x[sei+4]})\n",
+    "\n",
+    "# handle multiple scenarios w.r.t constraint generation\n",
+    "for idx in range(0,num_scenarios):\n",
+    "    s1_idx = 2*idx\n",
+    "    s2_idx = 2*idx+1    \n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: 0.5*x[sei+7] - x[sei+5] - x[s1_idx]})\n",
+    "    cons.append({\"type\": \"eq\", \"fun\": lambda x: 0.6*x[sei+8] - x[sei+6] - x[s2_idx]})\n",
     "    \n",
+    "res = optimize.minimize(tssp_obj, x0, args=(q_samples,c,e,f, csusl, num_scenarios), method=\"SLSQP\", \n",
+    "                        bounds=bounds, options={\"disp\":True})\n",
+    "\n",
     "x = res.x"
    ]
   },
@@ -685,15 +702,6 @@
     "print \"Inventory Units - %s\" % \", \".join([\"I%s_final: %s\" % (idx, val) for idx, val in enumerate(x[4:8])])\n",
     "print \"Operation Levels - %s\" % \", \".join([\"R%s: %s\" % (idx, val) for idx, val in enumerate(x[8:])])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
