fixed risk penalties in ROSPFR

--- a/Models.ipynb
+++ b/Models.ipynb
@@ -341,12 +341,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### TSSP - With Financial Risk\n",
+    "This was not conducted due to scipy's limited capabilities with respect to handling multiobjective problems. If time permits, the multiobjective model can be written in MATLAB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### RO SP FR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 190,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +385,7 @@
     "            profit targets for each scenario - shape (num_scenarios, num_targets)\n",
     "        \n",
     "        gpw : {np.array}\n",
-    "            ROSPFR goal programming weights for each scenario\n",
+    "            ROSPFR goal programming weights for each profit target - shape (num_scenarios, num_targets)\n",
     "    \"\"\"\n",
     "    num_scenarios = len(gpw)\n",
     "    scenario_prob = 1/num_scenarios\n",
@@ -408,8 +416,9 @@
     "    ineq_eval = np.dot(q,s.T).diagonal() + det_seg\n",
     "    \n",
     "    rospfr_seg = [[ineq_eval[idx] < target for target in target_arr] for idx, target_arr in enumerate(pt)]\n",
-    "    rospfr_seg = np.array(map(lambda x: sum(x), rospfr_seg))\n",
-    "    rospfr_seg = np.dot(rospfr_seg,gpw)*scenario_prob\n",
+    "    rospfr_seg = np.array(rospfr_seg)\n",
+    "    rospfr_seg = np.dot(rospfr_seg, gpw.T).diagonal()\n",
+    "    rospfr_seg = np.dot(rospfr_seg, np.ones(num_scenarios)*scenario_prob)\n",
     "    \n",
     "    obj = stoch_seg + det_seg - rospfr_seg\n",
     "    \n",
@@ -418,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 191,
    "metadata": {
     "collapsed": true
    },
@@ -487,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +506,7 @@
      "output_type": "stream",
      "text": [
       "Singular matrix C in LSQ subproblem    (Exit mode 6)\n",
-      "            Current function value: -1171.23674151\n",
+      "            Current function value: 184.806862553\n",
       "            Iterations: 1\n",
       "            Function evaluations: 20\n",
       "            Gradient evaluations: 1\n"
@@ -506,9 +515,12 @@
    ],
    "source": [
     "num_scenarios = 5\n",
-    "gpw = np.array([15, 20, 30, 50, 10]) # proportional to num scenarios\n",
+    "gpw_dist = (10,5) # mean and variance of penalties\n",
     "profit_target = (1000, 500, 3) # mean, variance, number of targets\n",
     "pt = np.random.normal(profit_target[0], profit_target[1], (num_scenarios, profit_target[2]))\n",
+    "\n",
+    "# generate penalties for each of the profit targets for each of the scenarios\n",
+    "gpw = np.random.normal(gpw_dist[0], gpw_dist[1], (num_scenarios, profit_target[2]))\n",
     "\n",
     "# upper bound on profits for each scenario - used in cons\n",
     "u_s = np.array([1500, 2000, 3000, 5000, 1000])\n",
